<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/backEnterPinPrivateFolder"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_drawable_able"/>
</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/enterPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter New PIN"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/i1"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/white"/>
                <ImageView
                    android:id="@+id/i2"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1"
                    android:background="@color/white"/>
                <ImageView
                    android:id="@+id/i3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/white"/>
                <ImageView
                    android:id="@+id/i4"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:text="@string/number_one"/>

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:text="@string/number_two"/>

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:text="@string/number_three"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:text="@string/number_four"/>

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:text="@string/number_five"/>

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:text="@string/number_six"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:text="@string/number_seven"/>

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:text="@string/number_eight"/>

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:text="@string/number_nine"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_button"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:text="@string/number_zero"/>

            <TextView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:text="@string/btn_backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
    </TableLayout>
</LinearLayout>