<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_custom"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            style="@style/wrap"
            android:layout_margin="10dp"
            android:text="@string/denied_storage_permission"
            android:textColor="#FF0000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            style="@style/wrap"
            android:layout_margin="10dp"
            android:text="@string/denied_storage_download_alert_para"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

        <LinearLayout
            style="@style/wrap"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_btn_failed_download_dialoge"
                style="@style/wrap"
                android:layout_marginHorizontal="10dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delete_btn_failed_download_dialoge"
                style="@style/wrap"
                android:layout_marginHorizontal="10dp"
                android:text="@string/download"
                android:textAllCaps="true"
                android:textColor="#FFCC15"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>